test_suite5/ALAN/test_suite/alan-2022-examples/failing/002530_mutation.alan
source S9 begin C0 := array do 9 end
